--- a/templates/base.html
+++ b/templates/base.html
@@ -33,9 +33,11 @@
   </header>
 
   <div id="content" class="container">
+    <div class="form-container mt-4 bg-light border rounded">
     {% block content %}
     <!-- The specific content of each page will be inserted here -->
     {% endblock %}
+    </div>
   </div>
 
   <footer>
