--- a/courses/static/courses.css
+++ b/courses/static/courses.css
@@ -2,7 +2,7 @@
   max-width: 720px; 
   margin: 20px auto;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  padding: 20px 20px 0px 20px;
+  padding: 20px;
 }
 
 .form-container .question {
@@ -47,7 +47,7 @@
 @media (max-width: 576px) {
   .form-container {
     max-width: 100%;
-    padding: 15px 15px 0px 15px; /* Smaller padding on smaller screens */
+    padding: 15px; /* Smaller padding on smaller screens */
   }
 }
 
@@ -56,5 +56,9 @@
 }
 
 #learning-in-public-links .form-control {
-  margin-bottom: 0.rem;
+  margin-bottom: 0.2rem;
+}
+
+.alert p {
+  margin-bottom: 0;
 }
