--- a/courses/templates/courses/course_detail.html
+++ b/courses/templates/courses/course_detail.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block breadcrumbs %}
+  <li><a href="{% url 'course_detail' course.slug %}">{{ course.title }}</a></li>
+{% endblock %}
+
 {% block content %}
 <h2>{{ course.title }}</h2>
 <p>{{ course.description }}</p>
