--- a/courses/templates/courses/enrollment_detail.html
+++ b/courses/templates/courses/enrollment_detail.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block breadcrumbs %}
+  <li><a href="{% url 'course_detail' course.slug %}">{{ course.title }}</a></li>
+{% endblock %}
+
 {% block content %}
   <h2>Edit Enrollment Details</h2>
   <form method="post">
