--- a/courses/templates/courses/course_detail.html
+++ b/courses/templates/courses/course_detail.html
@@ -57,7 +57,7 @@
   {% for project in projects %}
     <div>
       <a href="{% url 'project_view' course_slug=course.slug project_slug=project.slug %}">
-        {{ project.name }}
+        {{ project.title }}
       </a>
       <p>Due Date: {{ project.submission_due_date }}</p>
       <p>Peer Review Due Date: {{ project.peer_review_due_date }}</p>
