--- a/courses/templates/homework/homework_detail.html
+++ b/courses/templates/homework/homework_detail.html
@@ -203,7 +203,12 @@
     {% if not homework.is_scored %}
       <div class="mt-4 text-center">
         {% if is_authenticated %}
-          <button type="submit" class="btn btn-primary">Save</button>
+          <button
+              id="submit-button"
+              type="submit"
+              class="btn btn-primary">
+            Save
+          </button>
         {% else %}
           <p>Please <a href="{% url 'login' %}">log in</a> to submit your answers.</p>
         {% endif %}
