--- a/courses/templates/courses/course_list.html
+++ b/courses/templates/courses/course_list.html
@@ -4,7 +4,7 @@
   <h2>Courses</h2>
   <ul>
     {% for course in courses %}
-      <li><a href="{% url 'course_detail' course.slug %}">{{ course.title }}</a></li>
+      <li><a href="{% url 'course' course.slug %}">{{ course.title }}</a></li>
     {% endfor %}
   </ul>
 {% endblock %}
