--- a/courses/templates/courses/enrollment.html
+++ b/courses/templates/courses/enrollment.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block breadcrumbs %}
-  <li><a href="{% url 'course_detail' course.slug %}">{{ course.title }}</a></li>
+  <li><a href="{% url 'course' course.slug %}">{{ course.title }}</a></li>
 {% endblock %}
 
 {% block content %}
