--- a/courses/templates/courses/leaderboard.html
+++ b/courses/templates/courses/leaderboard.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block breadcrumbs %}
-  <li><a href="{% url 'course_detail' course.slug %}">{{ course.title }}</a></li>
+  <li><a href="{% url 'course' course.slug %}">{{ course.title }}</a></li>
 {% endblock %}
 
 {% block content %}
@@ -16,7 +16,7 @@
     <div class="row py-2 mx-2 {% cycle 'bg-light' 'bg-white' %} {% if enrollment.id == current_student_enrollment_id %}bg-info {% endif %}">
       <div class="col-1">{{ forloop.counter }}</div>
       <div class="col-8">
-        <a href="{% url 'leaderboard_detail' course_slug=course.slug enrollment_id=enrollment.id %}">
+        <a href="{% url 'leaderboard_score_breakdown' course_slug=course.slug enrollment_id=enrollment.id %}">
           {{ enrollment.display_name }}
         </a>
       </div>
