fixed all-auth, now dev is working

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
         {% if user.is_authenticated %}
           <li>{{ user.username }}! (<a href="{% url 'account_logout' %}">Logout</a>)</li>
         {% else %}
-          <li><a href="{% url 'login' %}">Login</a></li>
+          <li><a href="{% url 'account_login' %}">Login</a></li>
         {% endif %}
         <li><a href="{% url 'course_list' %}">Courses</a></li>
         {% block breadcrumbs %}
