added version and slack handling

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
   </div>
 
   <footer>
-    <p>© 2023 Course Management System</p>
+    <p>© 2023 Course Management System (version {{ VERSION }})</p>
   </footer>
 </body>
 
