--- a/courses/templates/include/learning_in_public_links.html
+++ b/courses/templates/include/learning_in_public_links.html
@@ -1,7 +1,7 @@
 {% if learning_in_public_cap > 0 %}
   <div id="learning-in-public-links-container" class="mb-3 question">
     <label for="learning_in_public_links[]" class="question-text">
-      Learning in public links
+      Learning in public links <span class="text-muted">(optional)</span>
       <i
           class="fas fa-question-circle text-muted"
           data-toggle="tooltip"
