correct labels for button

--- a/courses/templates/homework/homework.html
+++ b/courses/templates/homework/homework.html
@@ -217,7 +217,7 @@
               id="submit-button"
               type="submit"
               class="btn btn-primary">
-            {% if submission %}
+            {% if not submission %}
               Submit
             {% else %}
               Update
